--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
     <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/paginator.css" rel="stylesheet" />
   </head>
   <body>
+  <header id="main-header">
+      <div class="row align-items-center">
+        <div class="col-auto">
+          <div id="logo">Company</div>
+        </div>
+        <div id="main-nav" class="col">
+          <!-- Кнопка бургер-меню (видна только на мобильных) -->
+          <button id="mobile-menu-button" class="ms-auto d-md-none btn p-0" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#e6dfdf" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+          </button>
+
+          <!-- Основное меню (скрыто на мобильных) -->
+          <ul id="nav-list" class="d-none d-md-flex">
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html">НОВОСТИ</a></li>
+            <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
+          </ul>
+        </div>
+      </div>
+
+      <!-- Мобильное меню (появляется при клике) -->
+      <div id="mobile-menu" class="d-md-none">
+        <ul>
+            <li><a class="nav-li-item" href="#">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html">НОВОСТИ</a></li>
+            <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
+        </ul>
+      </div>
+    </header>
 <main>
 
 
@@ -190,162 +223,7 @@
     </div>
 </section>
 
-<section style="background-color: var(--accent-blue)">
-    <div style="max-width: 850px; margin: 0 auto; padding: 30px 0;">
-        <!-- Форма добавления комментария -->
-        <form method="GET" class="comment-form" style="background-color: var(--card-bg); padding: 25px; border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark);">
-            <h3 style="color: var(--text-main); margin-top: 0; margin-bottom: 20px;">Добавить комментарий</h3>
 
-            <div style="display: flex; gap: 20px; margin-bottom: 20px;">
-                <div style="flex: 1;">
-                    <label for="input-user-name" style="display: block; color: var(--text-secondary); margin-bottom: 8px; font-size: 14px;">Имя</label>
-                    <input id="input-user-name" type="text" name="name" style="width: 100%; padding: 10px; border-radius: 4px; border: 1px solid var(--border-dark); background-color: var(--bg-dark); color: var(--text-main);">
-                </div>
-            </div>
-
-            <div style="margin-bottom: 20px;">
-                <label for="input-coment-text" style="display: block; color: var(--text-secondary); margin-bottom: 8px; font-size: 14px;">Комментарий</label>
-                <textarea id="input-coment-text" name="comment" style="width: 100%; min-height: 100px; padding: 10px; border-radius: 4px; border: 1px solid var(--border-dark); background-color: var(--bg-dark); color: var(--text-main); resize: vertical;"></textarea>
-            </div>
-
-            <button type="submit" class="btn btn-primary" style="padding: 10px 25px; font-size: 16px;">Опубликовать</button>
-        </form>
-
-        <!-- Список комментариев -->
-        <div class="comments-list" id="comments-container">
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
-                <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                    <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
-                    <div>
-                        <p style="margin: 0; color: var(--text-main); font-weight: bold; font-size: 16px;">buy me a coffe</p>
-                    </div>
-                </div>
-                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">не хватило денег на нужный сервер, поэтому комментарии и т.п. не работают :(</p>
-                <p style="position: absolute; bottom: 10px; right: 15px; margin: 0; color: var(--text-secondary); font-size: 12px;">
-                    19.07.25 22:53
-                </p>
-            </div>
-
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
-                <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                    <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
-                    <div>
-                        <p style="margin: 0; color: var(--text-main); font-weight: bold; font-size: 16px;">miirageeee</p>
-                    </div>
-                </div>
-                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">в разделе новости все равно будем выкладывать обновы</p>
-                <p style="position: absolute; bottom: 10px; right: 15px; margin: 0; color: var(--text-secondary); font-size: 12px;">
-                    22.05.25 15:12
-                </p>
-            </div>
-
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
-                <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
-                    <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
-                    <div>
-                        <p style="margin: 0; color: var(--text-main); font-weight: bold; font-size: 16px;">asenaris</p>
-                    </div>
-                </div>
-                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">кстати, сайт медленный именно из-за бесплатного хостинга</p>
-                <p style="position: absolute; bottom: 10px; right: 15px; margin: 0; color: var(--text-secondary); font-size: 12px;">
-                    16.04.25 13:00
-                </p>
-            </div>
-
-
-        </div>
-        <div class="circle-pagination">
-                <span class="circle-pagination__item circle-pagination__item--disabled">&lt;</span>
-                <span class="circle-pagination__item circle-pagination__item--active">1</span>
-                <span class="circle-pagination__item">2</span>
-                <span class="circle-pagination__item">3</span>
-                <span class="circle-pagination__item">4</span>
-                <span class="circle-pagination__item">5</span>
-                <a class="circle-pagination__item" href="#">&gt;</a>
-        </div>  
-    </div>
-</section>
-
-
-<section class="team-section" style="background-color: var(--accent-blue); padding: 50px 0;">
-    <div class="container" style="max-width: 1000px; margin: 0 auto;">
-        <!-- Карточка с заголовком секции -->
-        <div class="card" style="background-color: var(--card-bg); padding: 25px; border-radius: 8px; margin-bottom: 30px; box-shadow: var(--shadow-dark);">
-            <h2 style="color: var(--text-main); margin: 0; text-align: center;">Наша команда</h2>
-        </div>
-
-        <!-- Карточки участников команды -->
-        <div class="team-members-container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; margin-bottom: 30px;">
-            <!-- Грачев Илья -->
-            <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
-                <div style="display: flex; gap: 20px;">
-                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Ilya.jpg" alt="Грачев Илья" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
-                    <div style="flex: 1;">
-                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                            <h3 style="color: var(--text-main); margin: 0;">Грачев Илья</h3>
-                            <a href="https://github.com/sudo-ascend" style="color: var(--text-main);">
-                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/github.ico" alt="GitHub" style="width: 25px; height: 25px;">
-                            </a>
-                        </div>
-                        <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Админ / Разработчик</h6>
-                        <p style="color: var(--text-main); margin: 0; line-height: 1.5;">Возглавляет команду разработчиков. Пишет скрипт для сайта и программы</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Федор Сапронов -->
-            <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
-                <div style="display: flex; gap: 20px;">
-                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Fedor.jpg" alt="Федор Сапронов" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
-                    <div style="flex: 1;">
-                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                            <h3 style="color: var(--text-main); margin: 0;">Федор Сапронов</h3>
-                            <a href="https://github.com/Fred640" style="color: var(--text-main);">
-                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/github.ico" alt="GitHub" style="width: 25px; height: 25px;">
-                            </a>
-                        </div>
-                        <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Стиль сайта</h6>
-                        <p style="color: var(--text-main); margin: 0; line-height: 1.5;">Написал код для шапки и комментариев</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Алексей Цуканов -->
-            <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
-                <div style="display: flex; gap: 20px;">
-                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Alex.jpg" alt="Алексей Цуканов" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
-                    <div style="flex: 1;">
-                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                            <h3 style="color: var(--text-main); margin: 0;">Алексей Цуканов</h3>
-                            <a href="https://t.me/Radarr_TMP" style="color: var(--text-main);">
-                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" style="width: 25px; height: 25px;">
-                            </a>
-                        </div>
-                        <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Продукт / Пиар Менеджер</h6>
-                        <p style="color: var(--text-main); margin: 0; line-height: 1.5;">Занимается продвижением. Работает в поддержке.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Виктория Аксенова -->
-            <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
-                <div style="display: flex; gap: 20px;">
-                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Victoria.jpg" alt="Виктория Аксенова" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
-                    <div style="flex: 1;">
-                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                            <h3 style="color: var(--text-main); margin: 0;">Виктория Аксенова</h3>
-                            <a href="https://t.me/toria_aks" style="color: var(--text-main);">
-                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" style="width: 25px; height: 25px;">
-                            </a>
-                        </div>
-                        <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Дизайнер</h6>
-                        <p style="color: var(--text-main); margin: 0; line-height: 1.5;">Нарисовала шаблон, задала стиль сайта.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 
 
@@ -353,7 +231,49 @@
 
 
 </main>
+<footer id="main-footer" style="background-color: var(--bg-dark);">
+    <div class="container">
+        <div class="row">
+            <!-- Первая колонка -->
+            <div class="col-md-4 mb-3">
+                <div class="fw-bold fs-5 mb-3" style="color: var(--text-main);">Company</div>
+                <p style="color: var(--text-secondary);">Надоело что админы могут следить за тобой, а ты за ними нет? Пора менять правила!</p>
+            </div>
 
+            <!-- Вторая колонка -->
+            <div class="col-md-4 mb-3">
+                <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/templates/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/templates/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                </ul>
+            </div>
+
+            <!-- Третья колонка с соцсетями -->
+            <div class="col-md-4 mb-3">
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <h5 class="mb-3" style="color: var(--text-main);">Соцсети</h5>
+                    <div class="d-flex justify-content-center gap-3">
+                        <a href="https://www.youtube.com/@Admin_RadarTMP" class="social-link">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
+                        </a>
+                        <a href="https://t.me/Radar_TMP" class="social-link">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
+                        </a>
+                        <a href="https://discord.gg/4urENWPF" class="social-link">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="border-top pt-3 text-center" style="border-color: var(--border-dark) !important;">
+            <h3 style="color: var(--text-secondary); margin: 0;">&copy; Company. Все права защищены</h3>
+        </div>
+    </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/burger_button.js"></script>
   <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_about_button.js"></script>
