--- a/index.html
+++ b/index.html
@@ -138,6 +138,39 @@
 
 
 
+<section style="background: linear-gradient(#60779f, 94%, var(--accent-blue))">
+    <div class="container" style="background-color: var(--card-bg); padding: 25px; border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px; margin: 0 auto; padding: 30px 0;">
+        <div class="row justify-content-center">
+            <div class="col-lg-12 col-xl-10 col-10 text-center">
+                <div class="history-header">
+                    <h1>ИСТОРИЯ ПРОЕКТА</h1>
+                    <button id="toggle-history" class="btn btn-outline toggle-history-btn">read</button>
+                </div>
+                <div id="history-content">
+                    <p class="hero-text" style="text-align: left;">
+                        Один раз, вспомнив про то как в 2000-ых в России были популярны такие радары-детекторы камер, в голову пришла идея, как такой же радар можно создать для тракерсМП.
+                    </p>
+                <img src="static/images/Admin Radar.jpg" alt="радар-детектор" style="width:70%;" class="justify-content-center">
+                <p class="hero-text" style="text-align: left;">
+                    Кто не знает, это прибор, который в реальном времени ищет камеры, установленные на дороге, и предостерегает водителя от получения потенцеального штрафа.
+                </p>
+                <p class="hero-text" style="text-align: left;">
+                    За пару дней набросал код, чтобы протестировать идею. И чудо, оно заработало - надо продолжать! Созвонились с другом, с которым катаемся в truckersMP - ему понравилось. Он присоединился к разработке. Таким образом командой из 2 человек, на протяжение 2 недель мы писали новый функционал и тестировали его в игре.
+                </p>
+                <p class="hero-text" style="text-align: left;">
+                    Выложили рекламный <a href="https://youtu.be/8ToF3vsFBD0?si=cB6re5aqVqbBQSGV">ролик</a>на YouTube. Но он собрал мало просмотров. Поэтому уже командой из 3 человек начали разрабатывать этот сайт для продвижения.
+                </p>
+                <p class="hero-text" style="text-align: left;">
+                    Подробно узнать как он работает вы можете в <a href="templates/all_news.html">блоге</a>
+                </p>
+                <p class="hero-text" style="text-align: left;">
+                    Разрабатывать мод для любимой игры - это настоящее удовольствие! Очень хочется поделиться им с другими игроками, Но так как обслуживать сайт и размещать его на сервере дорого, просим вас поддержать нас исключительно символической суммой. Так вы внесете свой вклад в развитие проекта.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section style="background-color: var(--accent-blue)">
     <div style="max-width: 850px; margin: 0 auto; padding: 30px 0;">
         <!-- Форма добавления комментария -->
