--- a/index.html
+++ b/index.html
@@ -136,10 +136,62 @@
     </div>
 </section>
 
+<section style="background: linear-gradient(black, 50%, var(--accent-blue))">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <h2 class="text-center text-white fw-bold">Тарифы</h2><br>
+
+                <div class="tariff-plans">
+                    <div class="tariff-card-combined">
+                        <div class="tariff-header" style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://a.d-cd.net/7828f6s-1920.jpg');
+                                                          background-size: cover;
+                                                          background-position: center;">
+                            <h2>Базовый</h2>
+                        </div>
+                        <div class="tariff-body">
+                            <div>
+                                <p class="text-secondary" style="display:inline;">Радар</p>
+                            </div>
+                            <div>
+                                <p class="text-secondary" style="display:inline;">No damage</p>
+                            </div>
+                            <p class="price" style="margin-top:102px">350 ₽</p>
+                            <div class="card-actions">
+                                <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="btn btn-outline">Подробнее</a>
+                                <a href="https://funpay.com/users/15635673/" class="btn btn-primary funpay"><img src="static/images/funpay.png" height="25"></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tariff-card-combined">
+                        <div class="tariff-header" style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://a.d-cd.net/roAAAgP9QOA-1920.jpg');
+                                                          background-size: cover;
+                                                          background-position: center;">
+                            <span class="sale-label">SALE</span>
+                            <h2>Pro</h2>
+                        </div>
+                        <div class="tariff-body">
+                            <p class="text-secondary">Радар</p>
+                            <p class="text-secondary">No damage</p>
+                            <p class="text-secondary">Обход 110км/ч</p>
+                            <p class="text-secondary">Стробоскопы</p>
+                            <p class="price">650 ₽</p>
+                            <div class="card-actions">
+                                <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="btn btn-outline">Подробнее</a>
+                                <a href="https://funpay.com/users/15635673/" class="btn btn-primary funpay"><img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/funpay.png" height="25"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <section style="background: linear-gradient(#60779f, 94%, var(--accent-blue))">
-    <div class="container" style="background-color: var(--card-bg); padding: 25px; border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px; margin: 0 auto; padding: 30px 0;">
+    <div class="container" style="background-color: var(--card-bg); padding: 25px; border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px; margin: 0 auto; padding: 0px 0;">
         <div class="row justify-content-center">
             <div class="col-lg-12 col-xl-10 col-10 text-center">
                 <div class="history-header">
@@ -194,7 +246,7 @@
 
         <!-- Список комментариев -->
         <div class="comments-list" id="comments-container">
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:10px">
+            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:130px">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
                     <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                     <div>
@@ -207,7 +259,7 @@
                 </p>
             </div>
 
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
+            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:130px">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
                     <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                     <div>
@@ -220,7 +272,7 @@
                 </p>
             </div>
 
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
+            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:130px">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
                     <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                     <div>
@@ -256,7 +308,7 @@
         </div>
 
         <!-- Карточки участников команды -->
-        <div class="team-members-container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; margin-bottom: 30px;">
+        <div class="team-members-container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(450px, 1fr)); gap: 20px; margin-bottom: 30px;">
             <!-- Грачев Илья -->
             <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
                 <div style="display: flex; gap: 20px;">
@@ -348,8 +400,8 @@
                 <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
-                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/templates/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
-                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/templates/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
                 </ul>
             </div>
 
