--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 
 <section style="background: linear-gradient(#60779f, 94%, var(--accent-blue))">
-    <div class="container" style="background-color: var(--card-bg); border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px; margin: 0 auto; padding: 0px 0px;">
+    <div class="container" style="background-color: var(--card-bg); border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px;">
         <div class="row justify-content-center">
             <div class="col-lg-12 col-xl-10 col-10 text-center">
                 <div class="history-header">
@@ -308,7 +308,7 @@
         </div>
 
         <!-- Карточки участников команды -->
-        <div class="team-members-container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; margin-bottom: 30px;">
+        <div class="team-members-container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(450px, 1fr)); gap: 20px; margin-bottom: 30px;">
             <!-- Грачев Илья -->
             <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
                 <div style="display: flex; gap: 20px;">
