--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 
 <section style="background: linear-gradient(#60779f, 94%, var(--accent-blue))">
-    <div class="container" style="background-color: var(--card-bg); border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px;">
+    <div class="container" style="background-color: var(--card-bg); border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px; padding: 0px 10px;">
         <div class="row justify-content-center">
             <div class="col-lg-12 col-xl-10 col-10 text-center">
                 <div class="history-header">
