--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="col-lg-12">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <h1 class="display-5 fw-bold mb-4" style="text-align: left;">Admin Radar</h1>
+                    <h1 class="display-5 fw-bold mb-4" style="text-align: left; margin-top:10px;">Admin Radar</h1>
                     <div class="row g-4 justify-content-center">
                         <!-- Карточка 1 -->
                         <div class="col-md-4">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div class="row mt-4">
+                    <div class="row mt-4" style="margin-top:10px;">
                         <div class="col-md-4">
                             <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none">Узнать больше</a>
                         </div>
