--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="col-lg-10">
-                    <h1 class="display-5 fw-bold mb-4" style="text-align: left;">Trainer</h1>
+                    <h1 class="display-5 fw-bold mb-4" style="text-align: left; margin-top: 20px;">Trainer</h1>
                     <div class="row g-4 justify-content-center">
                         <!-- Карточка 4 -->
                         <div class="col-md-4">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div class="row mt-4" style="margin-top:10px;">
+                    <div class="row mt-4" style="margin-top:20px;">
                         <div class="col-md-4">
                             <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none">Узнать больше</a>
                         </div>
