--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-12 col-xl-10 col-10 text-center">
                 <div class="history-header">
-                    <h1 style="padding: 0px 10px;">ИСТОРИЯ ПРОЕКТА</h1>
+                    <h2>ИСТОРИЯ ПРОЕКТА</h2>
                     <button id="toggle-history" class="btn btn-outline toggle-history-btn">read</button>
                 </div>
                 <div id="history-content">
@@ -246,7 +246,7 @@
 
         <!-- Список комментариев -->
         <div class="comments-list" id="comments-container">
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:130px">
+            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
                     <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                     <div>
@@ -259,7 +259,7 @@
                 </p>
             </div>
 
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:130px">
+            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
                     <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                     <div>
@@ -272,7 +272,7 @@
                 </p>
             </div>
 
-            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:130px">
+            <div class="comment-item" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: var(--shadow-dark); position: relative; max-height:150px">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
                     <img class="github-icon" src="static/images/Anonimous.jpeg" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                     <div>
