--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     <div class="container" style="background-color: var(--card-bg); border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px;">
         <div class="row justify-content-center">
             <div class="col-lg-12 col-xl-10 col-10 text-center">
-                <div class="history-header">
-                    <h2>ИСТОРИЯ ПРОЕКТА</h2>
+                <div class="history-header" style="display: flex; flex-direction: column; align-items: center;">
+                    <h2 style="text-align: center; width: 100%;">ИСТОРИЯ ПРОЕКТА</h2>
                     <button id="toggle-history" class="btn btn-outline toggle-history-btn">read</button>
                 </div>
                 <div id="history-content">
