--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 <section style="background: linear-gradient(#60779f, 94%, var(--accent-blue))">
     <div class="container" style="background-color: var(--card-bg); border-radius: 8px; margin-bottom: 40px; box-shadow: var(--shadow-dark); max-width: 850px;">
         <div class="row justify-content-center">
-            <div class="col-lg-12 col-xl-10 col-10 text-center">
-                <div class="history-header" style="display: flex; flex-direction: column; align-items: center;">
-                    <h2 style="text-align: center; width: 100%;">ИСТОРИЯ ПРОЕКТА</h2>
-                    <button id="toggle-history" class="btn btn-outline toggle-history-btn">read</button>
+            <div class="col-lg-12 col-xl-10 col-10">
+                <div class="history-header" style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+                    <h1 style="margin-top: 10px;">ИСТОРИЯ ПРОЕКТА</h1>
+                    <button id="toggle-history" class="btn btn-outline toggle-history-btn" style="padding: 10px 30px;margin-top: 20px;">read</button>
                 </div>
                 <div id="history-content">
                     <p class="hero-text" style="text-align: left;">
