--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="col-lg-12 col-xl-10 col-10">
                 <div class="history-header" style="display: flex; align-items: center; justify-content: center; gap: 20px;">
                     <h1 style="margin-top: 10px;">ИСТОРИЯ ПРОЕКТА</h1>
-                    <button id="toggle-history" class="btn btn-outline toggle-history-btn" style="padding: 10px 30px;margin-top: 20px;">read</button>
+                    <button id="toggle-history" class="btn btn-outline toggle-history-btn" style="margin-top: 20px;">read</button>
                 </div>
                 <div id="history-content">
                     <p class="hero-text" style="text-align: left;">
