--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                         </div>
                     </div>
 
-                    <div class="row mt-4" style="margin-top:20px;">
+                    <div class="row mt-4">
                         <div class="col-md-4">
-                            <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none">Узнать больше</a>
+                            <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none; margin-top:20px;">Узнать больше</a>
                         </div>
                     </div>
                 </div>
