--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                     <div class="row mt-4">
                         <div class="col-md-4">
-                            <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none; margin-top:20px;">Узнать больше</a>
+                            <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none; padding-top:20px;">Узнать больше</a>
                         </div>
                     </div>
                 </div>
